get working with custom options

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,1 @@
-{"workbench.colorCustomizations":{"titleBar.activeForeground":"#fff","titleBar.inactiveBackground":"#0000bb","titleBar.activeBackground":"#000099","activityBar.background":"#222244","statusBar.background":"#111","statusBar.foreground":"#ccc"}}
+{"workbench.colorCustomizations":{"titleBar.activeForeground":"#000000","statusBar.background":"#111","statusBar.foreground":"#ccc","titleBar.activeBackground":"#0000ff","activityBar.background":"#222244"}}
