--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Mike Cronin <mostlyfocusedmike@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "bin": {
+    "vscolor": "./bin/vscolor.js"
+  }
 }
